# xai-fidelity-benchmark

./: .gitignore  README.MD  _fix_bootstrap.py  pyproject.toml  requirements.txt
notebooks/: 01_adm_analysis.ipynb  02_data_ingestion.ipynb  02b_data_ingestion_thirdparty.ipynb  03_eda.ipynb  04_modeling.ipynb  04_surrogate.ipynb  04_surrogate_selection.ipynb  05_explanation.ipynb  05_modeling.ipynb  05_surrogate_fit.ipynb  06_explanation.ipynb  06_stability.ipynb  07_attribution.ipynb  07_stability.ipynb  08_attribution.ipynb  08b_attribution_replication.ipynb  09_vendor_hds_analysis.ipynb  10_pega_nb_importance.ipynb  exploration.ipynb
notebooks/archive/: exploration_original.ipynb
presentations/: .gitignore  feature_brainstorm_transavia.tex  thesis_update_2026-05-27.tex  thesis_update_2026-06-01.tex
scripts/: build_metric_selection_table.py  build_missingness_table.py  build_rq1_table.py  build_rq5_feature_analysis.py  build_thesis_tables.py  out.txt  plot_feature_importance_heatmap.py  plot_shap_top_by_category.py  plot_shap_waterfall.py  run_explanation_all_variants.py  stratify_by_technique.py  stratify_l5b15_stability.py
src/my_project/: explanation.py  features.py  metrics.py  parsing.py  surrogate.py
tables/: attribution_summary.tex  attribution_summary_replication.tex  bootstrap_dt_summary.tex  metric_selection.tex  psi_bin_sensitivity_auc.tex  surrogate_fidelity_per_variant.tex
thesis/: feedback 2.csv  feedback.csv  references.bib  thesis.tex
thesis/tables/: bootstrap_dt_summary.tex  depth_sensitivity_table.tex  metric_selection.tex  missingness.tex  (+9 more)
