[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "transavia-pega-adm-analysis"
version = "0.1.0"
description = "Analysis of Pega ADM propensity models for Transavia luggage (L5B15) and check-in offers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.34.0",
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "catboost>=1.2.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.0.0",
    "matplotlib>=3.10.0",
    "scipy>=1.14.0",
    "tqdm>=4.0.0",
    "tabulate>=0.9.0",
    "ipykernel>=7.0.0",
    "jupyterlab>=4.0.0",
]
