[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "transavia-pega-adm-analysis"
version = "0.1.0"
description = "Analysis of Pega ADM propensity models for Transavia luggage (L5B15) and check-in offers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.41.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "numpy>=2.4.6",
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.7.0",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "tabulate>=0.10.0",
    "shap>=0.51.0",
    "lime>=0.2.0.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyterlab>=4.5.7",
]
